docs: fix textlint error

--- a/packages/spindle-hooks/src/useTimeDistance/useTimeDistance.stories.mdx
+++ b/packages/spindle-hooks/src/useTimeDistance/useTimeDistance.stories.mdx
@@ -14,7 +14,7 @@ export const Time = ({ date, options }) => {
 
 ![stability-experiment](https://img.shields.io/badge/stability-experiment-red.svg)
 
-<Description>時間表示を行うHooksです。</Description>
+<Description>時間を表示するHooksです。</Description>
 
 ## Default Format
 
