--- a/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
+++ b/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
@@ -56,7 +56,7 @@ import { BottomButton } from './BottomButton';
 />
 
 ## Sticky Position
-<Description>上部のコンテンツがスクロール中に画面下部に固定され、スクロールし終わると固定が解除されます</Description>
+<Description>上部のコンテンツはスクロール中、画面下部に固定されます。スクロールが終わると固定が解除されます</Description>
 
 <Preview withSource="open">
   <Story name="Sticky Position">
