--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -73,7 +73,7 @@ import { BreadcrumbItem } from './BreadcrumbItem';
   </Story>
 </Preview>
 
-`<BreadcrumbItem>`を使わず、直接`<a>`要素を指定することもできます。各種フレームワークで定義された`<Link>`も同様に指定できます。その際には、現在地となるa要素にaria-current属性を付与してください。
+`<BreadcrumbItem>`を使わず、直接`<a>`要素を指定できます。各種フレームワークで定義された`<Link>`も同様に指定できます。その際には、現在地となるa要素にaria-current属性を付与してください。
 
 <Source
   code={`
