--- a/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
+++ b/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
@@ -292,7 +292,7 @@ return (
 
 ## Position
 <Description>positionプロパティのバリエーション確認用です</Description>
-<Description>デフォルトはleftTopで、その他にもtopLeft, topCenter, topRight, rightTop, rightCenter, rightBottom, bottomLeft, bottomCenter, bottomRight, leftTop, leftCenter, leftBottomを指定することができます</Description>
+<Description>デフォルトはleftTopで、その他にもtopLeft, topCenter, topRight, rightTop, rightCenter, rightBottom, bottomLeft, bottomCenter, bottomRight, leftTop, leftCenter, leftBottomを指定できます</Description>
 
 <Preview withSource="open">
   <Story name="Position">
