--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -25,7 +25,7 @@ import { Pagination } from './Pagination';
 
 <Description>Paginationはページの移動を目的として利用します。</Description>
 
-<Description>ページの前後に移動することができます。</Description>
+<Description>ページの前後に移動できます。</Description>
 
 <Description>デフォルトではアンカー要素を使用します。</Description>
 
@@ -43,7 +43,7 @@ import { Pagination } from './Pagination';
 </Description>
 <Description>
   - `onPageChange`(任意):
-  リンクをクリック後に処理をしたい場合に利用することができます。
+  リンクをクリック後に処理をしたい場合に利用できます。
 </Description>
 <Description>
   - `createUrl`(必須): リンクのhrefとなる値を指定してください。
