--- a/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
+++ b/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
@@ -9,7 +9,7 @@ import { InlineDropDown } from './InlineDropDown';
 ![stability-experiment](https://img.shields.io/badge/stability-experiment-red.svg)
 
 アイテム一覧画面の並び替え等の目的で利用されるDropDown型のコンポーネントです。一般的なフォーム画面の選択UIで利用することは想定していません。
-InlineDropDownは試験的なコンポーネントであるため、今後に破壊的な変更や削除がおこなわれる可能性があることに注意して利用してください。
+InlineDropDownは試験的なコンポーネントであるため、破壊的な変更や削除等おこなわれる可能性があることに注意して利用してください。
 
 <Source
   language="javascript"
