--- a/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
+++ b/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
@@ -47,7 +47,7 @@ Spindle UIのAppeal Modalは[HTMLDialogElement](https://developer.mozilla.org/en
 
 - `type`属性を指定されていない`<Button>`は、ダイアログを閉じるボタンになります
 - `<Button>`に固有の処理を追加したい場合には`type="button"`や`type="reset"`などの属性を指定してください
-- `<AppealModal>`は`open`プロパティの値を見て、開く・閉じるの動作を行います。`onClose`や`onCancel`のタイミングで`open`プロパティに`false`を指定し、ダイアログを閉じます
+- `<AppealModal>`は`open`プロパティの値を見て、開く・閉じるの動作をします。`onClose`や`onCancel`のタイミングで`open`プロパティに`false`を指定し、ダイアログを閉じます
   - `onCancel`イベントはEscapeキーを押されたなどデバイスや支援技術から伝達されます。特にそれらの動作を無効にする必要がない場合、通常は`open`プロパティを`false`にしてダイアログを閉じる動作を指定してください
 
 <Preview withSource="open">
