--- a/packages/spindle-ui/src/Toast/Toast.stories.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.stories.mdx
@@ -71,8 +71,8 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
         size="medium"
         variant={'outlined'}
         onClick={() => {
-          setMessage1('メッセージが届きました1');
-          setMessage2('メッセージが届きました2');
+          setMessage1('メッセージが届きました');
+          setMessage2('今何してる？');
         }}
       >
         Activate
@@ -230,8 +230,8 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
 
 <Source
   code={`
-<Toast active={true} offset={{ top: 30 }}>メッセージが届きました1</Toast>
-<Toast active={true} offset={{ top: 30 }}>メッセージが届きました2</Toast>
+<Toast active={true} offset={{ top: 30 }}>メッセージが届きました</Toast>
+<Toast active={true} offset={{ top: 30 }}>今何してる？</Toast>
   `}
 />
 
@@ -245,8 +245,8 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
 
 <Source
   code={`
-<Toast active={true} offset={{ bottom: 30 }} position="bottomCenter">メッセージが届きました1</Toast>
-<Toast active={true} offset={{ bottom: 30 }} position="bottomCenter">メッセージが届きました2</Toast>
+<Toast active={true} offset={{ bottom: 30 }} position="bottomCenter">メッセージが届きました</Toast>
+<Toast active={true} offset={{ bottom: 30 }} position="bottomCenter">今何してる？</Toast>
   `}
 />
 
@@ -281,7 +281,7 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
   このコンポーネントでは関与しませんが、ライブリージョンをアプリケーションで実装してください（参考：[実装方法 - 4.1.3 コンテンツの変更をユーザーに知らせる - Ameba Accessibility Guidelines](https://a11y-guidelines.ameba.design/4/1/3/#%E5%AE%9F%E8%A3%85%E6%96%B9%E6%B3%95)）
 </Description>
 <Description>
-  - 
+  -
   ライブリージョンは次のように実装します。 `html` 側に `aria-live="polite"` 及び `role="status"` を持つ要素を予め埋め込んでおき、この要素にコンテンツを動的に挿入することで、スクリーンリーダーが自動でコンテンツを読み上げてくれます。
 </Description>
 
@@ -342,5 +342,5 @@ const usePoliteAnnouncer = (message) => {
 
 ## スタック機能
 
-StackNotificationManager を使用することで Toast や SnackBar をスタックして複数表示することができます。
+StackNotificationManager を使用することで Toast や SnackBar をスタックして複数表示できます。
 詳しくは[StackNotificationManager のドキュメント](/docs/stacknotificationmanager--normal)を参照してください。
