docs: change carousel data to fix textlint

--- a/packages/spindle-hooks/src/useCarousel/useCarousel.stories.mdx
+++ b/packages/spindle-hooks/src/useCarousel/useCarousel.stories.mdx
@@ -25,9 +25,9 @@ export const carouselList = [
     link: 'https://about.ameba.jp/contents/ed88wdx61mf1/',
   },
   {
-    title: '4. Amebaでブログを書こう',
-    imageUrl: 'https://stat100.ameba.jp/ameblo/sp/img/amebloJp/ogp_image.png',
-    link: 'https://ameblo.jp/',
+    title: '4. ブロガーを応援しよう',
+    imageUrl: 'https://ssl-stat.amebame.com/pub/ads/adx/a1ea86ff-7ba6-4155-b8e5-a89c67cd1292.png?size=640',
+    link: 'https://cheering.ameba.jp/feature',
   },
   {
     title: '5. 「人」や「文化」をご紹介',
