test(spindle-ui): change story label

--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -28,7 +28,7 @@ import { PlusBold, ArrowRightBold, OpenblankFill } from '../Icon';
 
 <Preview withSource="open">
   <Story name="Large">
-    <Button size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>Contained</Button>
+    <Button size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>Contained Button</Button>
     <Button size="large" variant="outlined" {...actions('onClick', 'onMouseOver')}>Outlined</Button>
     <Button size="large" variant="neutral" {...actions('onClick', 'onMouseOver')}>Neutral</Button>
     <Button size="large" variant="danger" {...actions('onClick', 'onMouseOver')}>Danger</Button>
