--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -185,6 +185,8 @@ Standard variantにwrapオプションを指定すると、画面幅に入り切
 
 ## Scroll Management
 
+### Last Item
+
 コンテンツが長く、見切れた場合にはcurrent指定されているアイテムが画面内に表示されるようにスクロールします。
 
 <Preview withSource="open">
@@ -205,6 +207,36 @@ Standard variantにwrapオプションを指定すると、画面幅に入り切
   <BreadcrumbItem href="#">Ameヨコ (アメヨコ)</BreadcrumbItem>
   <BreadcrumbItem href="#">福利厚生・社内制度</BreadcrumbItem>
   <BreadcrumbItem href="#" current>「わたしたち、育休取得した経営陣です！」育休が2秒で快諾される、"取るのが当たり前"な環境とは</BreadcrumbItem>
+</BreadcrumbList>
+  `}
+/>
+
+### Middle Item
+
+中間のカテゴリにも同様にスクロールが適用されます。
+
+<Preview withSource="open">
+  <Story name="Standard Overflow Middle Item">
+    <BreadcrumbList variant="standard">
+      <BreadcrumbItem href="#">Amebaとは</BreadcrumbItem>
+      <BreadcrumbItem href="#" current>Ameヨコ (アメヨコ)</BreadcrumbItem>
+      <BreadcrumbItem href="#">福利厚生・社内制度</BreadcrumbItem>
+      <BreadcrumbItem href="#">
+        「わたしたち、育休取得した経営陣です！」育休が2秒で快諾される、"取るのが当たり前"な環境とは
+      </BreadcrumbItem>
+    </BreadcrumbList>
+  </Story>
+</Preview>
+
+<Source
+  code={`
+<BreadcrumbList variant="standard">
+  <BreadcrumbItem href="#">Amebaとは</BreadcrumbItem>
+  <BreadcrumbItem href="#" current>Ameヨコ (アメヨコ)</BreadcrumbItem>
+  <BreadcrumbItem href="#">福利厚生・社内制度</BreadcrumbItem>
+  <BreadcrumbItem href="#" >
+    「わたしたち、育休取得した経営陣です！」育休が2秒で快諾される、"取るのが当たり前"な環境とは
+  </BreadcrumbItem>
 </BreadcrumbList>
   `}
 />
