docs(spindle-ui): change the button label for story

--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -331,27 +331,27 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
     <InlineNotification.Frame variant='information' emphasis visible>
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ブログの管理者が承認するまで、コメントが反映されない場合があります</InlineNotification.Text>
-      <InlineNotification.Button>確認</InlineNotification.Button>
+      <InlineNotification.Button>詳細へ</InlineNotification.Button>
     </InlineNotification.Frame>
     <InlineNotification.Frame variant='confirmation' visible>
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>コメントが投稿されました</InlineNotification.Text>
-      <InlineNotification.Button>確認</InlineNotification.Button>
+      <InlineNotification.Button>確認する</InlineNotification.Button>
     </InlineNotification.Frame>
     <InlineNotification.Frame variant='confirmation' emphasis visible>
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>コメントが投稿されました</InlineNotification.Text>
-      <InlineNotification.Button>確認</InlineNotification.Button>
+      <InlineNotification.Button>投稿を確認</InlineNotification.Button>
     </InlineNotification.Frame>
     <InlineNotification.Frame variant='error' visible>
       <InlineNotification.Icon><ExclamationmarkCircleFill aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ファイル形式が正しくありません</InlineNotification.Text>
-      <InlineNotification.Button>確認</InlineNotification.Button>
+      <InlineNotification.Button>再アップロード</InlineNotification.Button>
     </InlineNotification.Frame>
     <InlineNotification.Frame variant='error' emphasis visible>
       <InlineNotification.Icon><ExclamationmarkCircleFill aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ファイル形式が正しくありません</InlineNotification.Text>
-      <InlineNotification.Button>確認</InlineNotification.Button>
+      <InlineNotification.Button>画像をアップロード</InlineNotification.Button>
     </InlineNotification.Frame>
   </Story>
 </Preview>
