docs(spindle-ui): fix docs for TextLink and TextButton

--- a/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
+++ b/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
@@ -76,7 +76,7 @@ import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
 
 <Source
   code={`
-<TextButton variant="subtle" />}>もっと見る</TextButton>
+<TextButton variant="subtle" />もっと見る</TextButton>
   `}
 />
 
@@ -150,9 +150,9 @@ import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
   }
 </style>
 <div class="container">
-<ul>
-  <li><button class="spui-TextButton" href="#">もっと見る</button></li>
-</ul>
+  <ul>
+    <li><button class="spui-TextButton" href="#">もっと見る</button></li>
+  </ul>
 </div>
   `}
 />
