--- a/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
+++ b/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
@@ -76,7 +76,7 @@ import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
 
 <Source
   code={`
-<TextLink href="#" variant="subtle" />}>もっと見る</TextLink>
+<TextLink href="#" variant="subtle" />もっと見る</TextLink>
   `}
 />
 
@@ -97,7 +97,7 @@ import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
 
 <Source
   code={`
-<TextLink href="#" icon={<ChevronRightBold aria-hidden="true" />} iconPosition="end">もっと見る</TextLink>
+<TextLink href="#" icon={<ChevronRightBold aria-hidden="true" />} iconPosition="end" variant="subtle">もっと見る</TextLink>
   `}
 />
 
@@ -150,9 +150,9 @@ import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
   }
 </style>
 <div class="container">
-<ul>
-  <li><a class="spui-TextLink" href="#">もっと見る</a></li>
-</ul>
+  <ul>
+    <li><a class="spui-TextLink" href="#">もっと見る</a></li>
+  </ul>
 </div>
   `}
 />
