fix(spindle-ui): inline notification emphasis story pattern

--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -64,6 +64,11 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ブログの管理者が承認するまで、コメントが反映されない場合があります</InlineNotification.Text>
     </InlineNotification.Frame>
+  </Story>
+</Preview>
+
+<Preview withSource="open">
+  <Story name="Information Emphasis">
     <InlineNotification.Frame variant='information' emphasis visible>
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ブログの管理者が承認するまで、コメントが反映されない場合があります</InlineNotification.Text>
@@ -93,6 +98,11 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>コメントが投稿されました</InlineNotification.Text>
     </InlineNotification.Frame>
+  </Story>
+</Preview>
+
+<Preview withSource="open">
+  <Story name="Confirmation Emphasis">
     <InlineNotification.Frame variant='confirmation' emphasis visible>
       <InlineNotification.Icon><Information aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>コメントが投稿されました</InlineNotification.Text>
@@ -122,6 +132,11 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
       <InlineNotification.Icon><ExclamationmarkCircleFill aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ファイル形式が正しくありません</InlineNotification.Text>
     </InlineNotification.Frame>
+  </Story>
+</Preview>
+
+<Preview withSource="open">
+  <Story name="Error Emphasis">
     <InlineNotification.Frame variant='error' emphasis visible>
       <InlineNotification.Icon><ExclamationmarkCircleFill aria-hidden="true"/></InlineNotification.Icon>
       <InlineNotification.Text>ファイル形式が正しくありません</InlineNotification.Text>
