docs(spindle-ui): integrate Lighted into other variant sections

--- a/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
+++ b/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
@@ -30,6 +30,7 @@ import { PlusBold } from '../Icon';
     <IconButton size="large" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="large" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="large" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="large" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
@@ -39,6 +40,7 @@ import { PlusBold } from '../Icon';
 <IconButton size="large" variant="outlined"><PlusBold /></IconButton>
 <IconButton size="large" variant="neutral"><PlusBold /></IconButton>
 <IconButton size="large" variant="danger"><PlusBold /></IconButton>
+<IconButton size="large" variant="lighted"><PlusBold /></IconButton>
   `}
 />
 
@@ -49,6 +51,7 @@ import { PlusBold } from '../Icon';
 <button class="spui-IconButton spui-IconButton--large spui-IconButton--outlined"><svg /></button>
 <button class="spui-IconButton spui-IconButton--large spui-IconButton--neutral"><svg /></button>
 <button class="spui-IconButton spui-IconButton--large spui-IconButton--danger"><svg /></button>
+<button class="spui-IconButton spui-IconButton--large spui-IconButton--lighted"><svg /></button>
   `}
 />
 
@@ -60,6 +63,7 @@ import { PlusBold } from '../Icon';
     <IconButton size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="medium" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="medium" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="medium" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
@@ -69,6 +73,7 @@ import { PlusBold } from '../Icon';
 <IconButton size="medium" variant="outlined"><PlusBold /></IconButton>
 <IconButton size="medium" variant="neutral"><PlusBold /></IconButton>
 <IconButton size="medium" variant="danger"><PlusBold /></IconButton>
+<IconButton size="medium" variant="lighted"><PlusBold /></IconButton>
   `}
 />
 
@@ -79,6 +84,7 @@ import { PlusBold } from '../Icon';
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined"><svg /></button>
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral"><svg /></button>
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--danger"><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--lighted"><svg /></button>
   `}
 />
 
@@ -90,6 +96,7 @@ import { PlusBold } from '../Icon';
     <IconButton size="small" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="small" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="small" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
@@ -99,6 +106,7 @@ import { PlusBold } from '../Icon';
 <IconButton size="small" variant="outlined"><PlusBold /></IconButton>
 <IconButton size="small" variant="neutral"><PlusBold /></IconButton>
 <IconButton size="small" variant="danger"><PlusBold /></IconButton>
+<IconButton size="small" variant="lighted"><PlusBold /></IconButton>
   `}
 />
 
@@ -109,6 +117,7 @@ import { PlusBold } from '../Icon';
 <button class="spui-IconButton spui-IconButton--small spui-IconButton--outlined"><svg /></button>
 <button class="spui-IconButton spui-IconButton--small spui-IconButton--neutral"><svg /></button>
 <button class="spui-IconButton spui-IconButton--small spui-IconButton--danger"><svg /></button>
+<button class="spui-IconButton spui-IconButton--small spui-IconButton--lighted"><svg /></button>
   `}
 />
 
@@ -120,6 +129,7 @@ import { PlusBold } from '../Icon';
     <IconButton size="exSmall" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="exSmall" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="exSmall" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="exSmall" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
@@ -129,6 +139,7 @@ import { PlusBold } from '../Icon';
 <IconButton size="exSmall" variant="outlined"><PlusBold /></IconButton>
 <IconButton size="exSmall" variant="neutral"><PlusBold /></IconButton>
 <IconButton size="exSmall" variant="danger"><PlusBold /></IconButton>
+<IconButton size="exSmall" variant="lighted"><PlusBold /></IconButton>
   `}
 />
 
@@ -139,6 +150,7 @@ import { PlusBold } from '../Icon';
 <button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--outlined"><svg /></button>
 <button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--neutral"><svg /></button>
 <button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--danger"><svg /></button>
+<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--lighted"><svg /></button>
   `}
 />
 
@@ -150,6 +162,7 @@ import { PlusBold } from '../Icon';
     <IconButton disabled size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton disabled size="medium" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton disabled size="medium" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton disabled size="medium" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
@@ -159,6 +172,7 @@ import { PlusBold } from '../Icon';
 <IconButton disabled size="medium" variant="outlined"><PlusBold /></IconButton>
 <IconButton disabled size="medium" variant="neutral"><PlusBold /></IconButton>
 <IconButton disabled size="medium" variant="danger"><PlusBold /></IconButton>
+<IconButton disabled size="medium" variant="lighted"><PlusBold /></IconButton>
   `}
 />
 
@@ -169,27 +183,7 @@ import { PlusBold } from '../Icon';
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined" disabled><svg /></button>
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral" disabled><svg /></button>
 <button class="spui-IconButton spui-IconButton--medium spui-IconButton--danger" disabled><svg /></button>
-  `}
-/>
-
-## Lighted
-
-<Preview withSource="open">
-  <Story name="Lighted">
-    <IconButton size="large" variant="lighted" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
-  </Story>
-</Preview>
-
-<Source
-  code={`
-<IconButton size="large" variant="lighted">+</IconButton>
-  `}
-/>
-
-<Source
-  language='html'
-  code={`
-<button class="spui-IconButton spui-IconButton--large spui-IconButton--lighted">+</button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--lighted" disabled><svg /></button>
   `}
 />
 
