docs(spindle-ui): change the label on the Neutral button

--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -292,7 +292,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   <Story name="With Icon">
     <Button icon={<FileAdd/>} size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>ファイルを選択する</Button>
     <Button icon={<Link/>} size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>リンクをコピーする</Button>
-    <Button icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォローする</Button>
+    <Button icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォロー</Button>
   </Story>
 </Preview>
 
@@ -300,7 +300,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   code={`
 <Button icon={<FileAdd/>} size="large" variant="contained">ファイルを選択する</Button>
 <Button icon={<Link/>} size="medium" variant="outlined">リンクをコピーする</Button>
-<Button icon={<PlusBold/>} size="small" variant="neutral">フォローする</Button>
+<Button icon={<PlusBold/>} size="small" variant="neutral">フォロー</Button>
   `}
 />
 
@@ -309,7 +309,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   code={`
 <button class="spui-Button spui-Button--intrinsic spui-Button--large spui-Button--contained"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
 <button class="spui-Button spui-Button--intrinsic spui-Button--medium spui-Button--outlined"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
-<button class="spui-Button spui-Button--intrinsic spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォローする</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
   `}
 />
 
@@ -319,7 +319,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   <Story name="Full Width With Icon">
     <Button layout="fullWidth" icon={<FileAdd/>} size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>ファイルを選択する</Button>
     <Button layout="fullWidth" icon={<Link/>} size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>リンクをコピーする</Button>
-    <Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォローする</Button>
+    <Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォロー</Button>
   </Story>
 </Preview>
 
@@ -327,7 +327,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   code={`
 <Button layout="fullWidth" icon={<FileAdd/>} size="large" variant="contained">ファイルを選択する</Button>
 <Button layout="fullWidth" icon={<Link/>} size="medium" variant="outlined">リンクをコピーする</Button>
-<Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral">フォローする</Button>
+<Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral">フォロー</Button>
   `}
 />
 
@@ -336,7 +336,7 @@ import { PlusBold, Link, FileAdd } from '../Icon';
   code={`
 <button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
 <button class="spui-Button spui-Button--fullWidth spui-Button--medium spui-Button--outlined"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
-<button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォローする</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
   `}
 />
 
