--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -1,7 +1,7 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { Button } from './Button';
-import { PlusBold, Link, FileAdd } from '../Icon';
+import { PlusBold, Link, FileAdd, ChevronDownBold } from '../Icon';
 
 # Button
 
@@ -293,6 +293,9 @@ import { PlusBold, Link, FileAdd } from '../Icon';
     <Button icon={<FileAdd/>} size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>ファイルを選択する</Button>
     <Button icon={<Link/>} size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>リンクをコピーする</Button>
     <Button icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォロー</Button>
+    <Button icon={<ChevronDownBold/>} iconPosition="end" size="large" variant="contained"  {...actions('onClick', 'onMouseOver')}>さらに表示</Button>
+    <Button icon={<ChevronDownBold/>} iconPosition="end" size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>もっと見る</Button>
+    <Button icon={<ChevronDownBold/>} iconPosition="end" size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>さらに表示</Button>
   </Story>
 </Preview>
 
@@ -301,15 +304,21 @@ import { PlusBold, Link, FileAdd } from '../Icon';
 <Button icon={<FileAdd/>} size="large" variant="contained">ファイルを選択する</Button>
 <Button icon={<Link/>} size="medium" variant="outlined">リンクをコピーする</Button>
 <Button icon={<PlusBold/>} size="small" variant="neutral">フォロー</Button>
+<Button icon={<ChevronDownBold/>} iconPosition="end" size="large" variant="contained">さらに表示</Button>
+<Button icon={<ChevronDownBold/>} iconPosition="end" size="medium" variant="outlined">もっと見る</Button>
+<Button icon={<ChevronDownBold/>} iconPosition="end" size="small" variant="neutral">さらに表示</Button>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-Button spui-Button--intrinsic spui-Button--large spui-Button--contained"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
-<button class="spui-Button spui-Button--intrinsic spui-Button--medium spui-Button--outlined"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
-<button class="spui-Button spui-Button--intrinsic spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--large spui-Button--contained spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--medium spui-Button--outlined spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--small spui-Button--neutral spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--large spui-Button--contained spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>さらに表示</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--medium spui-Button--outlined spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>もっと見る</button>
+<button class="spui-Button spui-Button--intrinsic spui-Button--small spui-Button--neutral spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>さらに表示</button>
   `}
 />
 
@@ -320,6 +329,9 @@ import { PlusBold, Link, FileAdd } from '../Icon';
     <Button layout="fullWidth" icon={<FileAdd/>} size="large" variant="contained" {...actions('onClick', 'onMouseOver')}>ファイルを選択する</Button>
     <Button layout="fullWidth" icon={<Link/>} size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>リンクをコピーする</Button>
     <Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>フォロー</Button>
+    <Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="large" variant="contained"  {...actions('onClick', 'onMouseOver')}>さらに表示</Button>
+    <Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}>もっと見る</Button>
+    <Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}>さらに表示</Button>
   </Story>
 </Preview>
 
@@ -328,15 +340,21 @@ import { PlusBold, Link, FileAdd } from '../Icon';
 <Button layout="fullWidth" icon={<FileAdd/>} size="large" variant="contained">ファイルを選択する</Button>
 <Button layout="fullWidth" icon={<Link/>} size="medium" variant="outlined">リンクをコピーする</Button>
 <Button layout="fullWidth" icon={<PlusBold/>} size="small" variant="neutral">フォロー</Button>
+<Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="large" variant="contained">さらに表示</Button>
+<Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="medium" variant="outlined">もっと見る</Button>
+<Button layout="fullWidth" icon={<ChevronDownBold/>} iconPosition="end" size="small" variant="neutral">さらに表示</Button>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
-<button class="spui-Button spui-Button--fullWidth spui-Button--medium spui-Button--outlined"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
-<button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>ファイルを選択する</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--medium spui-Button--outlined spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>リンクをコピーする</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral spui-Button--iconstart"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>フォロー</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--large"><svg /></span>さらに表示</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--medium spui-Button--outlined spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--medium"><svg /></span>もっと見る</button>
+<button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral spui-Button--iconend"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>さらに表示</button>
   `}
 />
 
