docs(spindle-ui): add "Differences of notification components"

--- a/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
@@ -114,7 +114,19 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
 
 SnackBarコンポーネントは、利用者に一時的なお知らせをする際に利用します。画面上に複数表示できます。SnackBarは自動で消えてしまうため、見落とされても影響のない「重要ではないお知らせ」に用います。利用する際には、その他により適切な手段がないか必ず確認してください。
 
-「重要なお知らせ」とは何か、他のnotification系のコンポーネントとの違いは別途まとめる予定です。
+「重要なお知らせ」とは何かは別途まとめる予定です。
+
+## 通知系のComponentの違い
+
+SnackbarとToastは非常に似ているComponentです。また、ユーザーにお知らせをするための他のComponentとしてInlineNotificationもあります。現状下記のように使い分けています。
+
+Component | テキストの長さ | 追加のアクションの有無 | 自動で消える秒数 | 表示位置 | メッセージの内容
+:-- | :-- | :-- | :-- | :-- | :--
+[Toast](/docs/toast--information) | 1行のみ | なし | 4秒 | フローティングで位置固定で表示（画面上下の中央のみ※） | 見落としても支障がない
+Snackbar | 3,4行まで | あり | 10秒 | フローティングで位置固定で表示（画面上下の左・右・中央）| 読んでは欲しい、訴求
+[InlineNotification](/docs/inlinenotification--information) | 制限なし | あり | 消えない | ページに埋め込む必要がありレイアウトに影響を与える | エラー通知など、ユーザーの追加のアクションが必要なもの
+
+※現在は、SPは中央下のみ実装されています。
 
 <Source
   language="javascript"
@@ -454,16 +466,6 @@ SnackBarコンポーネントは、利用者に一時的なお知らせをする
 - hover、focusされている時には、時間制限を停止します。フォーカスが離れたのち、再度0秒から計測します
 - モードを奪うことになるため、自動的にfocusはしません
 - デバイスのorientationに追従して表示位置・サイズを変更します
-
-## Toastとの違い
-
-- Toastは1行しかメッセージをいれられないのに対して、Snack Barは複数行入れることができます。
-- Toastは4秒で消えるのに対して、Snack Barは10秒で消えます。
-- Toastは画面上下の中央にしか配置できなかったのに対し、Snack Barは画面上下の左・右・中央に配置できます。
-  - NOTE: SPはcenter-bottom固定
-- Snack Barには1つだけ任意のボタンを置くことができます
-  - NOTE: 5文字以上のボタンは設置できません
-- Toastよりは消えるタイミングが遅いため、Toastと比べるとやや優先度が高いです。またボタンやテキスト量など表示できる情報も多いです。
 
 ## 利用時に注意してほしいこと
 
