--- a/packages/spindle-ui/src/Toast/Toast.stories.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.stories.mdx
@@ -109,7 +109,7 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
 
 <Meta title="Toast" component={Toast} />
 
-Toastコンポーネントは、利用者に一時的なお知らせをする際に利用します。画面上に複数表示することができます。Toastは自動で消えてしまうため、見落とされても影響のない「重要ではないお知らせ」に用います。利用する際には、その他により適切な手段がないか必ず確認してください。
+Toastコンポーネントは、利用者に一時的なお知らせをする際に利用します。画面上に複数表示できます。Toastは自動で消えてしまうため、見落とされても影響のない「重要ではないお知らせ」に用います。利用する際には、その他により適切な手段がないか必ず確認してください。
 
 「重要なお知らせ」とは何かは別途まとめる予定です。
 
