docs(spindle-ui): add DesignDocs for InlineNotification

--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -68,7 +68,7 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
 通知の内容によって、`variant`3種類と`emphasis`2種類を組み合わて使用してください。variantの初期値は`information`、emphasisの初期値は`false`です。
 
 ### Information
-システム上で処理が実行された事を報告するときに使用します。情報がユーザーにとって喜ばしくない状況で使用することが多いです。
+システム上で処理が実行された事を報告するときに使用します。必ずしも情報がユーザーにとって喜ばしくない状況で使用することが多いです。
 
 <Preview withSource="open">
   <Story name="Information">
